--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,2 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
+/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
