dynamic schedule,reset btn enable

--- a/src/app/components/scheduler/scheduler.component.html
+++ b/src/app/components/scheduler/scheduler.component.html
@@ -9,7 +9,7 @@
                 <!-- <div class="col-md-4 text-left">
                 </div> -->
                 <div class="col-md-4 text-center">
-                    <h3 class="mt-0">{{ viewDate | calendarSchedulerDate:(view +
+                    <h3  style="font-weight: 500; color: darkblue;" class="mt-0">{{ viewDate | calendarSchedulerDate:(view +
                         'ViewTitle'):locale:weekStartsOn:excludeDays:viewDays:startsWithToday }}</h3>
                 </div>
                 <div class="date-nav-container col-md-4 text-right">
@@ -54,11 +54,11 @@
 
             </div>
             <div class="button-group col-md-4">
-                <div class="first-div" >
-                    <button mat-raised-button color="primary">Schedule</button>
+                <div class="first-div schedule-button" >
+                    <button mat-stroked-button [disabled]="!isScheduleEnabled" color="primary">Schedule</button>
                 </div>
-                <div style="margin-top: 30px;" class="second-div">
-                    <button mat-raised-button color="accent">Reset</button>
+                <div style="margin-top: 30px;" class="second-div reset-button">
+                    <button mat-stroked-button [disabled]="!isResetEnabled" color="accent" (click)="onResetClick()">Reset</button>
                 </div>
                 
             </div>
