--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<div><app-scheduler></app-scheduler></div>
+<div><app-scheduler [events]="events" (scheduleEvent)="formUserSelectedEvent($event)"></app-scheduler></div>
