--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<div><app-scheduler [events]="events" (scheduleEvent)="formUserSelectedEvent($event)"></app-scheduler></div>
+<div><app-scheduler [events]="events" (scheduleEvent)="formUserSelectedEvent($event)"
+    (resetEvent)="resetUserSchedule($event)"></app-scheduler></div>
