--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<div><app-scheduler [events]="events" (scheduleEvent)="formUserSelectedEvent($event)"></app-scheduler></div>
+<div class="app-container"><app-scheduler [events]="events" (scheduleEvent)="formUserSelectedEvent($event)"></app-scheduler></div>
