--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,10 @@
     border-color: #fff #ddd;
     margin: 0 2em 2em
 }
+
+.app-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
