--- a/src/app/components/scheduler/scheduler.component.scss
+++ b/src/app/components/scheduler/scheduler.component.scss
@@ -6,11 +6,11 @@
 
 .calendar-container{
     width: 800px;
-    margin-left: 100px;
+    // margin-left: 100px;
 }
 
 .calendar-details {
-    margin-top: 25px;
+    // margin-top: 25px;
     width: 800px;
     display: inline-flex;
     // margin-left: 100px;
