--- a/src/app/components/scheduler/scheduler.component.html
+++ b/src/app/components/scheduler/scheduler.component.html
@@ -55,10 +55,10 @@
             </div>
             <div class="button-group col-md-4">
                 <div class="first-div schedule-button" >
-                    <button mat-stroked-button [disabled]="!isScheduleEnabled" color="primary">Schedule</button>
+                    <button mat-raised-button [disabled]="!isScheduleEnabled" color="primary">Schedule</button>
                 </div>
                 <div style="margin-top: 30px;" class="second-div reset-button">
-                    <button mat-stroked-button [disabled]="!isResetEnabled" color="accent" (click)="onResetClick()">Reset</button>
+                    <button mat-raised-button [disabled]="!isResetEnabled" color="accent" (click)="onResetClick()">Reset</button>
                 </div>
                 
             </div>
